plugins {
    id 'java'
    id "org.springframework.boot" version "2.7.5"
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id "org.sonarqube" version "3.0"
}
apply from: 'version.gradle'
apply plugin: 'io.spring.dependency-management'

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${cloudGcp}"
    }
}
group = 'com.ulegalize'
project.version = applicationVersion
//version = applicationVersion
description = 'ulegalize-lawfirm'
sourceCompatibility = '1.17'
targetCompatibility = '1.17'

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2')
    }
}
springBoot {
    buildInfo{
        properties {
            additional = ['displayVersion' : applicationVersion]
        }
    }
}
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
    }
    implementation("de.codecentric:spring-boot-admin-starter-client:${springAdminVersion}")
//    implementation('org.springframework.boot:spring-boot-starter-actuator')

    // loggin stuff
    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    implementation "net.logstash.logback:logstash-logback-encoder:${logstashVersion}"
    implementation "ch.qos.logback:logback-core:${logBackVersion}"
    implementation "ch.qos.logback:logback-classic:${logBackVersion}"
    implementation "ch.qos.logback:logback-access:${logBackVersion}"


    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'com.h2database:h2'
    testImplementation 'org.mvnsearch:h2-functions-4-mysql:2.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'

    testImplementation "org.springframework.security:spring-security-test:${springSecurity}"

    runtimeOnly group: 'com.fasterxml.jackson.module', name: 'jackson-modules-java8', version: "${jackson}"

    implementation "com.ulegalize:ulegalizeshare:${ulegalizeShare}"

    compileOnly "org.projectlombok:lombok:${lombok}"
    annotationProcessor "org.projectlombok:lombok:${lombok}"
    testCompileOnly "org.projectlombok:lombok:${lombok}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombok}"

    implementation "org.apache.commons:commons-text:${commonsText}"
    implementation "org.apache.commons:commons-lang3:${commonsLang}"
    implementation "org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauth}"

    implementation "com.mysql:mysql-connector-j:${mysqlConnector}"
//    compile group: 'com.slack.api', name: 'slack-api-model', version: "${slackVersion}"
    // https://mvnrepository.com/artifact/com.auth0/java-jwt
    implementation group: 'com.auth0', name: 'java-jwt', version: "${auth0JwtVersion}"
    implementation group: 'com.auth0', name: 'auth0', version: "${auth0Version}"
    implementation "com.auth0:jwks-rsa:${auth0JwksVersion}"
    implementation('org.apache.httpcomponents:httpclient:4.5.13')

//    KAFKA
    implementation('org.springframework.kafka:spring-kafka') {
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'

    }

    implementation "org.springframework.boot:spring-boot-starter-web-services"
    implementation "jakarta.xml.ws:jakarta.xml.ws-api:3.0.1"
    runtimeOnly "com.sun.xml.ws:jaxws-rt:3.0.1"
}

test {
    useJUnitPlatform()
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}